--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header class="header">
         <nav>
-            <h3 class="portfolio-title">Ma<span class="text-orange">r</span>y</h3>
+            <h3 class="portfolio-title">Ma<span class="text-    
+                orange">r</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
